--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -120,16 +120,16 @@
   <div class="marginAll marginAll1920">
 
     <!--site -->
-    <div class="row-change center-v">
+    <div class="row-change centerVer">
       <div class="column float">
         <img src="greylines.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank"> </div>
 
       <div class="column">
-        <p class="t-title-l">MANIFOLD GROUND</p>
+        <p class="titleL">MANIFOLD GROUND</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Form finding from 2 dimensions to 3 dimensions</p>
+        <p class="textM">Form finding from 2 dimensions to 3 dimensions</p>
       </div>
 
 
@@ -139,43 +139,43 @@
 
 
     <!-- content-->
-    <div class="row item-height-m center-v ">
+    <div class="row heightM centerVer ">
       <p class="tArrow"> Methodology </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
     <!--diagram-->
-    <div class="column center-v">
+    <div class="column centerVer">
       <img src="object.jpg" alt="DIAGRAM" class="image">
 
       <div class="column widthM">
-        <P class="t-title-l"> 2D TO 3D</P>
+        <P class="titleL"> 2D TO 3D</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Manipulation of 2 dimensional drawing to 3d dimension geometry </p>
+        <p class="textM">Manipulation of 2 dimensional drawing to 3d dimension geometry </p>
       </div>
     </div>
     <!--diagram-->
     <div class="blankHXL"></div>
     <!--geometry-->
-    <div class="column center-v">
+    <div class="column centerVer">
       <div class="column float">
         <img src="model.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="column widthM">
-        <P class="t-title-l">GEOMETRY ON SITE</P>
+        <P class="titleL">GEOMETRY ON SITE</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Transfer the geometry to site </p>
+        <p class="textM">Transfer the geometry to site </p>
       </div>
     </div>
     <!--geometry-->
     <div class="blankHXL"></div>
 
     <!--density-->
-    <div class="row-change center-v">
+    <div class="row-change centerVer">
       <div class="float">
-        <p class="t-title-l">2D TO 3D MANIPULATION</p>
+        <p class="titleL">2D TO 3D MANIPULATION</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Cut and fold on both side of the bristol paper</p>
+        <p class="textM">Cut and fold on both side of the bristol paper</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -186,17 +186,17 @@
     <!--density-->
 
     <!-- content-->
-    <div class="row item-height-m center-v ">
+    <div class="row heightM centerVer ">
       <p class="tArrow"> Site and Programs </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
     <!--site -->
-    <div class="row-change center-v">
+    <div class="row-change centerVer">
       <div class="column">
-        <p class="t-title-l">DIAGRAMS</p>
+        <p class="titleL">DIAGRAMS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Programs including market, observation place, beer garden, etc. </p>
+        <p class="textM">Programs including market, observation place, beer garden, etc. </p>
       </div>
       <div class="vertical-line-blank"> </div>
 
@@ -216,15 +216,15 @@
 
 
     <!--Section Perspective -->
-    <div class="row-change center-v">
+    <div class="row-change centerVer">
       <div class="column float">
         <img src="render.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="column ">
-        <P class="t-title-l">FLYOVER VIEW</P>
+        <P class="titleL">FLYOVER VIEW</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">From the surrounding building people can see this build as an urban
+        <p class="textM">From the surrounding building people can see this build as an urban
           sculpture</p>
       </div>
     </div>
@@ -238,11 +238,11 @@
 
 
     <!--Site -->
-    <div class="row-change center-v">
+    <div class="row-change centerVer">
       <div class="column">
-        <p class="t-title-l">SITE</p>
+        <p class="titleL">SITE</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">This site is one of the most popular places in san Francisco. Along
+        <p class="textM">This site is one of the most popular places in san Francisco. Along
           the city axis, there are Saint Mary's Cathedral, SF City Hall, and there is a freeway
           entrance on the southern side.
         </p>
@@ -257,14 +257,14 @@
     <div class="blankHXL"></div>
 
     <!--Site -->
-    <div class="column center-v">
+    <div class="column centerVer">
         <img src="site.jpg" alt="DIAGRAM" class="image">
         <div class="blankHM"></div>
 
       <div class="column">
-        <P class="t-title-l">SITE</P>
+        <P class="titleL">SITE</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Site: 450 Hayes St. San Francisco, CA 94102</p>
+        <p class="textM">Site: 450 Hayes St. San Francisco, CA 94102</p>
 
       </div>
     </div>
