--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -120,15 +120,15 @@
 
 
     <!--diagram 1-->
-    <div class="row-change center-v">
+    <div class="row-change centerVer">
       <div class="float">
         <img src="render.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank"></div>
       <div class="column widthM">
-        <P class="t-title-l">NARROW STRIPES</P>
+        <P class="titleL">NARROW STRIPES</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Using a series of straps to divide the space that providing an
+        <p class="textM">Using a series of straps to divide the space that providing an
           infrastructure space serves the community nearby</p>
       </div>
 
@@ -137,7 +137,7 @@
 
 
     <!-- content-->
-    <div class="row item-height-m center-v ">
+    <div class="row heightM centerVer ">
       <p class="tArrow"> Programs and Diagrams </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
@@ -147,11 +147,11 @@
 
 
     <!--diagram 2-->
-    <div class="row-change row-changeRV center-v">
+    <div class="row-change row-changeRV centerVer">
       <div class="column widthM">
-        <p class="t-title-l">PROGRAMS</p>
+        <p class="titleL">PROGRAMS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Three categories of programs. Social and Leisure, Library, and
+        <p class="textM">Three categories of programs. Social and Leisure, Library, and
           miscellaneous</p>
       </div>
       <div class="column float">
@@ -163,7 +163,7 @@
 
 
     <!-- content-->
-    <div class="row item-height-m center-v ">
+    <div class="row heightM centerVer ">
       <p class="tArrow"> Renders</p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
@@ -171,33 +171,33 @@
 
 
     <!--Section Perspective -->
-    <div class="row-change center-v">
+    <div class="row-change centerVer">
       <div class="column float">
         <img src="render1.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <P class="t-title-l">RENDERS</P>
+        <P class="titleL">RENDERS</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Multiple views</p>
+        <p class="textM">Multiple views</p>
       </div>
     </div>
     <!--Section Perspective -->
 
 
     <!-- content-->
-    <div class="row  item-height-m center-v ">
+    <div class="row  heightM centerVer ">
       <p class="tArrow"> Site and Floor Plan </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
     <!--Plan-->
-    <div class="row-change row-changeRV center-v">
+    <div class="row-change row-changeRV centerVer">
       <div class="column widthM">
-        <p class="t-title-l">SITE PLAN</p>
+        <p class="titleL">SITE PLAN</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Relationship between site and the infrastructure building</p>
+        <p class="textM">Relationship between site and the infrastructure building</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -208,16 +208,16 @@
     <!--Plan-->
     <div class="blank-lineheight-xl"></div>
     <!--Plan site-->
-    <div class="row-change center-v">
+    <div class="row-change centerVer">
       <div class="column float">
         <img src="site.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <p class="t-title-l"> SITE</p>
+        <p class="titleL"> SITE</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Location: Hyde Park, London</p>
+        <p class="textM">Location: Hyde Park, London</p>
       </div>
 
     </div>
