--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -125,9 +125,9 @@
       </div>
       <div class="vertical-line-blank"></div>
       <div class="body-right body-txt">
-        <P class="t-title-l">RECOVERY OF RIVER EDGES</P>
+        <P class="titleL">RECOVERY OF RIVER EDGES</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
+        <p class="textM">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
         </p>
       </div>
 
@@ -142,9 +142,9 @@
     <!--density-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <p class="t-title-l"> DENSITY OF DIVISIONS</p>
+        <p class="titleL"> DENSITY OF DIVISIONS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Research to project</p>
+        <p class="textM">Research to project</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -169,9 +169,9 @@
     <!--site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">SITE ANALYSIS</p>
+        <p class="titleL">SITE ANALYSIS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">The site is located in the LA River near the Sunnynook River Park.</p>
+        <p class="textM">The site is located in the LA River near the Sunnynook River Park.</p>
       </div>
       <div class="vertical-line-blank"> </div>
 
@@ -184,9 +184,9 @@
     <!--site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">SITE RESEARCH METHOD</p>
+        <p class="titleL">SITE RESEARCH METHOD</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Photos below were taken from the linear path. Each photo took in
+        <p class="textM">Photos below were taken from the linear path. Each photo took in
           between every single six feet along the path. </p>
       </div>
       <div class="vertical-line-blank"> </div>
@@ -210,9 +210,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title-l">Photos of Sequences and Movements</P>
+        <P class="titleL">Photos of Sequences and Movements</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">the sequences of photos show the relationship between subjects(the
+        <p class="textM">the sequences of photos show the relationship between subjects(the
           place where took photos) and objects(main object on site).</p>
       </div>
     </div>
@@ -227,9 +227,9 @@
     <!--research-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">RESEARCH ON SITE</p>
+        <p class="titleL">RESEARCH ON SITE</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Transform the research final result to site</p>
+        <p class="textM">Transform the research final result to site</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -243,9 +243,9 @@
     <!--research-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">FINAL VIEWS</p>
+        <p class="titleL">FINAL VIEWS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">On-site view before vs. after</p>
+        <p class="textM">On-site view before vs. after</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -270,9 +270,9 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <P class="t-title-l">PROGRAMS</P>
+        <P class="titleL">PROGRAMS</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Cafe, restaurant, kayak</p>
+        <p class="textM">Cafe, restaurant, kayak</p>
       </div>
     </div>
     <!--programs-->
@@ -281,9 +281,9 @@
     <!--programs-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">DIAGRAMS</p>
+        <p class="titleL">DIAGRAMS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Relationship between site and the surrounding</p>
+        <p class="textM">Relationship between site and the surrounding</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -301,9 +301,9 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <P class="t-title-l">FLOOR PLAN</P>
+        <P class="titleL">FLOOR PLAN</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Horizontal division create the space with dynamic view</p>
+        <p class="textM">Horizontal division create the space with dynamic view</p>
       </div>
     </div>
     <!--plan -->
@@ -312,9 +312,9 @@
     <!--render-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">Collages</p>
+        <p class="titleL">Collages</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Experiencing the space with human perspective</p>
+        <p class="textM">Experiencing the space with human perspective</p>
       </div>
       <div class="vertical-line-blank">
       </div>
