--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -121,13 +121,13 @@
 
 
     <!--diagram 1-->
-    <div class="row center-v center-h">
+    <div class="row centerVer centerHorz">
       <img src="diagram.jpg" alt="DIAGRAM" class="float widthMM">
 
       <div class="column">
-        <P class="t-title-l">TWO VOLUMES IN ONE SPACE</P>
+        <P class="titleL">TWO VOLUMES IN ONE SPACE</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">the purpose of these two volumes is to distinguish two types of
+        <p class="textM">the purpose of these two volumes is to distinguish two types of
           programs: for the public, another for private use.</p>
       </div>
     </div>
@@ -143,29 +143,29 @@
     <!-- content-->
     <br>
     <!--diagram 1-->
-    <div class="column center-v center-h">
+    <div class="column centerVer centerHorz">
       <img src="programs.jpg" alt="DIAGRAM" class=" float">
 
-      <p class="t-title-l">PRIVATE VS. PUBLIC</p>
+      <p class="titleL">PRIVATE VS. PUBLIC</p>
       <p class="horizontal-line"></p>
-      <p class="t-text-m widthL">insert two volumes into one space two distinguish two main
+      <p class="textM widthL">insert two volumes into one space two distinguish two main
         programs. one for the public, another one for private purpose</p>
 
     </div>
     <!--diagram 1-->
     <div class="blank-lineheight-xl"></div>
     <!--diagram 2-->
-    <div class="column center-v center-h">
+    <div class="column centerVer centerHorz">
       <img src="diagram0.jpg" alt="DIAGRAM" class="float">
 
-      <p class="t-title-l">EXERCISE VS. LEISURE</p>
+      <p class="titleL">EXERCISE VS. LEISURE</p>
       <p class="horizontal-line"></p>
-      <p class="t-text-m widthL">the circulation integrates the two volumes as one space. it creates
+      <p class="textM widthL">the circulation integrates the two volumes as one space. it creates
         a
         dynamic view between the leisure and training sections.</p>
     </div>
     <!--diagram 2-->
-    <div class="blank-lineheight-l"></div>
+    <div class="blankHL"></div>
 
     <!-- content-->
     <div class="content-tl">
@@ -176,9 +176,9 @@
     <!--environmental diagram-->
     <div class="body-h">
       <div class="body-right  body-txt marginAll">
-        <p class="t-title-s">THE MANIPULATION OF TWO VOLUMES</p>
+        <p class="titleS">THE MANIPULATION OF TWO VOLUMES</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Void vs. Solid</p>
+        <p class="textM">Void vs. Solid</p>
       </div>
       <div class="body-left body-img float">
         <img src="diagram1.jpg" alt="DIAGRAM" class="image">
@@ -188,10 +188,10 @@
     <!--environmental diagram-->
     <div class="body-h">
       <div class="body-right  body-txt marginAll">
-        <p class="t-title-s">LIGHT AND AIR</p>
+        <p class="titleS">LIGHT AND AIR</p>
         <p class="horizontal-line"></p>
 
-        <p class="t-text-m">an opening on the southern side provides and a gap between adjacent
+        <p class="textM">an opening on the southern side provides and a gap between adjacent
           build providing all-day nature daylight from the top all the way to the swimming pool at
           first floor</p>
       </div>
@@ -203,10 +203,10 @@
     <!--environmental diagram-->
     <div class="body-h">
       <div class="body-right  body-txt marginAll">
-        <p class="t-title-s">FACADE DESGIN</p>
+        <p class="titleS">FACADE DESGIN</p>
         <p class="horizontal-line"></p>
 
-        <p class="t-text-m">all the windows equally set, and the metal mesh with two types of
+        <p class="textM">all the windows equally set, and the metal mesh with two types of
           coating redomly setup</p>
       </div>
       <div class="body-left body-img float">
@@ -219,13 +219,13 @@
 
 
     <!--Section Perspective -->
-    <div class="column center-v center-h">
+    <div class="column centerVer centerHorz">
       <img src="section_perspective.jpg" alt="DIAGRAM" class="float">
 
-      <div class="body-right body-txt width-m">
-        <P class="t-title-l">SECTION PERSPECTIVE</P>
+      <div class="body-right body-txt widthXS">
+        <P class="titleL">SECTION PERSPECTIVE</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">F1-5 with Facade Detail</p>
+        <p class="textM">F1-5 with Facade Detail</p>
       </div>
     </div>
     <!--Section Perspective -->
@@ -241,10 +241,10 @@
     <!--renders 2-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">INTERIOR VIEW</p>
+        <p class="titleL">INTERIOR VIEW</p>
         <p class="horizontal-line"></p>
 
-        <p class="t-text-m">Interior view from the public side</p>
+        <p class="textM">Interior view from the public side</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -262,9 +262,9 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <p class="t-title-l">INTERIOR VIEW</p>
+        <p class="titleL">INTERIOR VIEW</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Interior view from the activity room</p>
+        <p class="textM">Interior view from the activity room</p>
       </div>
 
     </div>
@@ -274,10 +274,10 @@
     <!--renders 2-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">STREET VIEW</p>
+        <p class="titleL">STREET VIEW</p>
         <p class="horizontal-line"></p>
 
-        <p class="t-text-m">Street view from south west</p>
+        <p class="textM">Street view from south west</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -296,56 +296,56 @@
     </div>
     <!-- content-->
     <!--plans and sections 1-->
-    <div class="column center-v center-h">
+    <div class="column centerVer centerHorz">
       <img src="plan_f1.jpg" alt="DIAGRAM" class="image">
 
-      <p class="t-title-l">FLOOR PLANS </p>
+      <p class="titleL">FLOOR PLANS </p>
       <p class="horizontal-line"></p>
-      <p class="t-text-m">F1 and F2</p>
+      <p class="textM">F1 and F2</p>
     </div>
 
     <!--plans and sections 1-->
     <div class="blank-lineheight-xl"></div>
     <!--plans and sections 2-->
-    <div class="column center-v center-h">
+    <div class="column centerVer centerHorz">
       <img src="plan_f3.jpg" alt="DIAGRAM" class="image">
 
-      <p class="t-title-l">FLOOR PLANS </p>
+      <p class="titleL">FLOOR PLANS </p>
       <p class="horizontal-line"></p>
-      <p class="t-text-m">F3 and F4</p>
+      <p class="textM">F3 and F4</p>
 
     </div>
     <!--plans and sections 2-->
     <div class="blank-lineheight-xl"></div>
     <!--plans and sections 3-->
-    <div class="column center-v center-h">
+    <div class="column centerVer centerHorz">
       <img src="plan_f5.jpg" alt="plans and sections" class="image">
 
-      <p class="t-title-l">FLOOR PLANS </p>
+      <p class="titleL">FLOOR PLANS </p>
       <p class="horizontal-line"></p>
-      <p class="t-text-m">F5 and Facade Detail</p>
+      <p class="textM">F5 and Facade Detail</p>
 
     </div>
     <!--plans and sections 3-->
 
     <div class="blank-lineheight-xl"></div>
     <!--plans and sections 2-->
-    <div class="column center-v center-h">
+    <div class="column centerVer centerHorz">
       <img src="sections_l.jpg" alt="DIAGRAM" class="image">
 
-      <P class="t-title-l"> SECTIONS</P>
+      <P class="titleL"> SECTIONS</P>
       <p class="horizontal-line"></p>
-      <p class="t-text-m">F5 and Facade Detail</p>
+      <p class="textM">F5 and Facade Detail</p>
     </div>
     <!--plans and sections 2-->
     <div class="blank-lineheight-xl"></div>
     <!--plans and sections 3-->
-    <div class="column center-v center-h">
+    <div class="column centerVer centerHorz">
       <img src="section_1.jpg" alt="Section1" class="image">
       <img src="section_2.jpg" alt="Section2" class="image">
-      <P class="t-title-l">SECTIONS</P>
+      <P class="titleL">SECTIONS</P>
       <p class="horizontal-line"></p>
-      <p class="t-text-m">Section Detail</p>
+      <p class="textM">Section Detail</p>
     </div>
     <!--plans and sections 3-->
     <!-- content-->
@@ -355,12 +355,12 @@
     </div>
     <!-- content-->
     <!--site-->
-    <div class="column center-v center-h">
+    <div class="column centerVer centerHorz">
       <img src="site.jpg" alt="DIAGRAM" class="image">
 
-      <p class="t-title-l">SITE </p>
+      <p class="titleL">SITE </p>
       <p class="horizontal-line"></p>
-      <p class="t-text-m">110 Franklin St. San Francisco, CA, 94102</p>
+      <p class="textM">110 Franklin St. San Francisco, CA, 94102</p>
 
     </div>
     <!--site-->
