--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -115,7 +115,7 @@
 
   <!--body-->
   <div class="marginAll">
-    <div class="blank-lineheight-l"></div>
+    <div class="blankHL"></div>
 
     <!--site -->
     <div class="body-h">
@@ -125,15 +125,15 @@
       <div class="vertical-line-blank"> </div>
 
       <div class="body-right  body-txt">
-        <p class="t-title-l">THE ROTATION OF CURVES </p>
+        <p class="titleL">THE ROTATION OF CURVES </p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Foam finding and geometry manipulation</p>
+        <p class="textM">Foam finding and geometry manipulation</p>
       </div>
 
 
     </div>
     <!--site -->
-    <div class="blank-lineheight-l"></div>
+    <div class="blankHL"></div>
     <!-- content-->
     <div class="content-tl">
       <p class="tArrow">PART 1 THE ISLAND
@@ -144,9 +144,9 @@
     <!--geometry-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <P class="t-title-l"> A 20 FEET DIAMETER SITE</P>
+        <P class="titleL"> A 20 FEET DIAMETER SITE</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Adding geometries based on requirement </p>
+        <p class="textM">Adding geometries based on requirement </p>
       </div>
       <div class="vertical-line-blank"></div>
       <div class="body-left body-img float">
@@ -154,15 +154,15 @@
       </div>
     </div>
     <!--geometry-->
-    <div class="blank-lineheight-l"></div>
+    <div class="blankHL"></div>
     <!--geometry-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <P class="t-title-l"> ADDING OR BOOLEAN GEOMETRY ON SITE</P>
+        <P class="titleL"> ADDING OR BOOLEAN GEOMETRY ON SITE</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">1st week, 6 volumes</p>
-          <p class="t-text-m">2nd week, 8 geometries</p>
-        <p class="t-text-m"> 3rd week, 20 volumes</p>
+        <p class="textM">1st week, 6 volumes</p>
+          <p class="textM">2nd week, 8 geometries</p>
+        <p class="textM"> 3rd week, 20 volumes</p>
       </div>
       <div class="vertical-line-blank"></div>
       <div class="body-left body-img float">
@@ -176,14 +176,14 @@
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-    <div class="blank-lineheight-l"></div>
+    <div class="blankHL"></div>
 
     <!--density-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <p class="t-title-l">TWO CUTS ONE FOAM</p>
+        <p class="titleL">TWO CUTS ONE FOAM</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Cut and fold the foam</p>
+        <p class="textM">Cut and fold the foam</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -198,9 +198,9 @@
     <!--site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">PHOTOS OF THE FOAM</p>
+        <p class="titleL">PHOTOS OF THE FOAM</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Elevation view</p>
+        <p class="textM">Elevation view</p>
       </div>
       <div class="vertical-line-blank"> </div>
 
@@ -209,7 +209,7 @@
       </div>
     </div>
     <!--site -->
-    <div class="blank-lineheight-l"></div>
+    <div class="blankHL"></div>
 
 
 
@@ -221,9 +221,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title-l">DRAWING        </P>
+        <P class="titleL">DRAWING        </P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">From the surrounding building people can see this build as an urban
+        <p class="textM">From the surrounding building people can see this build as an urban
           sculpture</p>
       </div>
     </div>
@@ -234,9 +234,9 @@
     <!--Site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l"> DRAWING    </p>
+        <p class="titleL"> DRAWING    </p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">This site is one of the most popular places in san Francisco. Along
+        <p class="textM">This site is one of the most popular places in san Francisco. Along
           the city axis, there are Saint Mary's Cathedral, SF City Hall, and there is a freeway
           entrance on the southern side.
         </p>
@@ -261,9 +261,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title-l">PART I + PART II = PART III</P>
+        <P class="titleL">PART I + PART II = PART III</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Combine the island and the foam</p>
+        <p class="textM">Combine the island and the foam</p>
 
       </div>
     </div>
@@ -271,10 +271,10 @@
     <!--Site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">FLOOR PLANS </p>
+        <p class="titleL">FLOOR PLANS </p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">A conceptual 4-story single-family house  </p>
-        <p class="t-text-m"> the form-finding concept of rotation curves shows in these plans </p>
+        <p class="textM">A conceptual 4-story single-family house  </p>
+        <p class="textM"> the form-finding concept of rotation curves shows in these plans </p>
 
       </div>
       <div class="vertical-line-blank">
@@ -284,7 +284,7 @@
       </div>
     </div>
     <!--Site -->
-    <div class="blank-lineheight-l"></div>
+    <div class="blankHL"></div>
     <!--Site -->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -292,9 +292,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title-l">ELEVATIONS</P>
+        <P class="titleL">ELEVATIONS</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Concrete facade with openings</p>
+        <p class="textM">Concrete facade with openings</p>
 
       </div>
     </div>
@@ -302,9 +302,9 @@
     <!--Site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title-l">SECTIONS</p>
+        <p class="titleL">SECTIONS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">
+        <p class="textM">
           the form-finding concept of rotation curves shows in these sections
         </p>
       </div>
@@ -315,7 +315,7 @@
       </div>
     </div>
     <!--Site -->
-    <div class="blank-lineheight-l"></div>
+    <div class="blankHL"></div>
     <!--Site -->
     <div class="body-h">
       <div class="body-left body-img float">
@@ -323,9 +323,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title-l">RENDERS</P>
+        <P class="titleL">RENDERS</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Two views from the inside of the house</p>
+        <p class="textM">Two views from the inside of the house</p>
 
       </div>
     </div>
