--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -192,26 +192,26 @@
           </g>
         </svg>
         <br>
-        <p class="t-text-l">"The order is not rationalistic and underlying but is simply order,
+        <p class="textL">"The order is not rationalistic and underlying but is simply order,
           like that of continuity, one thing after another. "</p>
-        <p class="t-text-m">— Donald Judd </p>
+        <p class="textM">— Donald Judd </p>
 
       </div>
       <div class="vertical-line-blank"> </div>
 
       <div class="column">
-        <p class="t-title-l">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS
+        <p class="titleL">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS
 
         </p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Thesis Studio</p>
+        <p class="textM">Thesis Studio</p>
       </div>
     </div>
     <!-- cover -->
     <div class="blankHXL"></div>
     
     <!-- content-->
-    <div class="row item-height-m center-v">
+    <div class="row heightM centerVer">
       <p class="tArrow"> Abstract </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
@@ -220,11 +220,11 @@
     <!--Abstract-->
     <div class="column">
 
-      <P class="t-title-l"> ABSTRACT</P>
+      <P class="titleL"> ABSTRACT</P>
       <p class="horizontal-line"></p>
-      <div class="blank-lineheight-s"></div>
+      <div class="blankHS"></div>
 
-      <p class="t-text-s ">Architecture is nothing more but a union of disparate systems, and
+      <p class="textS ">Architecture is nothing more but a union of disparate systems, and
         every aspect of an architectural design is part of one system or another. The individual
         systems can be continuous or discontinuous, and they are all related in some way. As an
         architect, it’s important that one does not only consider continuity as it pertains to a
@@ -233,8 +233,8 @@
         to create distinctive features in an architectural design if the architect considers its
         effect on other systems.
       </p>
-      <div class="blank-lineheight-s"></div>
-      <p class="t-text-s">In a building, each type of architectural elements creates a kind of
+      <div class="blankHS"></div>
+      <p class="textS">In a building, each type of architectural elements creates a kind of
         spatial continuity or discontinuity based on the way it’s arranged. For example, if we
         have a row of ten columns, each 10 ft apart, we can say that they are continuous because
         they form a sequence. If we have ten columns with different shape or orientation, we can
@@ -243,8 +243,8 @@
         relation to other arrangements, they form larger spatial networks and complex material
         systems.
       </p>
-      <div class="blank-lineheight-s"></div>
-      <p class="t-text-s">The degree of continuity and discontinuity can be adjusted to achieve
+      <div class="blankHS"></div>
+      <p class="textS">The degree of continuity and discontinuity can be adjusted to achieve
         the needs of a particular program. For example, when designing a 600 meter tall landmark
         skyscraper, one must consider the building’s use for both shopping and as an office. Many
         archi- tects who design these types of buildings will use focal points such as the arrival
@@ -256,12 +256,12 @@
         differentiation, but a well-conceived design will ensure that they are in harmony with the
         greater whole.
       </p>
-      <div class="blank-lineheight-m"></div>
+      <div class="blankHM"></div>
 
       <img src="image_bl.jpg" alt="DIAGRAM" class="image float">
     </div>
     <!--Abstract-->
-    <div class="blank-lineheight-l"></div>
+    <div class="blankHL"></div>
     <!-- content-->
     <div class="content-tl">
       <p class="tArrow"> Operation Method</p>
@@ -272,12 +272,12 @@
     <div class="column">
       <img src="diagrams.jpg" alt="DIAGRAM" class="image float">
 
-      <P class="t-title-l">OPERATION METHOD
+      <P class="titleL">OPERATION METHOD
       </P>
       <p class="horizontal-line"></p>
       <br>
 
-      <p class="t-text-s">Architects use objects to connect and divide space. The arrangement of
+      <p class="textS">Architects use objects to connect and divide space. The arrangement of
         objects appreciates aesthetic appeal and spatial quality. The goal of this thesis is to
         showcase a series of experiments in the arrangement of architectural elements, and explore
         the relationships between architectural components and the integration of various types of
@@ -288,7 +288,7 @@
         similarity. The similarity includes size and shape, spacing and orientation.
       </p>
       <br>
-      <p class="t-text-s">For instance, if we have a row of ten columns with similar size,
+      <p class="textS">For instance, if we have a row of ten columns with similar size,
         shape, spacing, or orientation, we call it continuity. If we have different size, or
         different shape, or different orientation, we can say that is discontinuity because they
         do not maintain the sequence.
@@ -307,16 +307,16 @@
     <!--CaseStudy1 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title-l">CASE STUDY 1</p>
+        <p class="titleL">CASE STUDY 1</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Here are some historical buildings that have utilized continuity and
+        <p class="textM">Here are some historical buildings that have utilized continuity and
           discontinuity to create distinctive features. </p>
       </div>
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
         <img src="CaseStudy1.jpg" alt="DIAGRAM" class="image">
-        <p class="t-thesis-casestudy">SANNA, 21ST CENTURY MUSEUM OF CONTEMPORARY ART 2004 </p>
+        <p class="textS styleItalic">SANNA, 21ST CENTURY MUSEUM OF CONTEMPORARY ART 2004 </p>
       </div>
     </div>
     <!--CaseStudy1 -->
@@ -325,41 +325,41 @@
     <!--CaseStudy2 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title-l">CASE STUDY 2</p>
+        <p class="titleL">CASE STUDY 2</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">These case studies interpret the relationship between the
+        <p class="textM">These case studies interpret the relationship between the
           architectural elements and aesthetic appeal. </p>
       </div>
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
         <img src="CaseStudy2.jpg" alt="DIAGRAM" class="image">
-        <p class="t-thesis-casestudy">JUNTA ISHIGAMI, KANAGAWA INSTITUTE OF TECHNOLOGY 2008</p>
+        <p class="textS styleItalic">JUNTA ISHIGAMI, KANAGAWA INSTITUTE OF TECHNOLOGY 2008</p>
       </div>
     </div>
     <!--CaseStudy2 -->
     <!--CaseStudy3 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title-l">CASE STUDY 3 </p>
+        <p class="titleL">CASE STUDY 3 </p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">The following experiments will explore the effect of changes in the
+        <p class="textM">The following experiments will explore the effect of changes in the
           degree of continuity and discontinuity in these iconic buildings.</p>
       </div>
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
         <img src="CaseStudy3.jpg" alt="DIAGRAM" class="image">
-        <p class="t-thesis-casestudy">MIES VAN DER ROHE, S.R. CROWN HALL 1956</p>
+        <p class="textS styleItalic">MIES VAN DER ROHE, S.R. CROWN HALL 1956</p>
       </div>
     </div>
     <!--CaseStudy3 -->
     <!--CaseStudy4 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title-l">CASE STUDY 4</p>
+        <p class="titleL">CASE STUDY 4</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">
+        <p class="textM">
 
         </p>
       </div>
@@ -367,7 +367,7 @@
       </div>
       <div class="body-right body-img float">
         <img src="CaseStudy4.jpg" alt="DIAGRAM" class="image">
-        <p class="t-thesis-casestudy">LE CORBUSIER, CARPENTER CENTER 1962</p>
+        <p class="textS styleItalic">LE CORBUSIER, CARPENTER CENTER 1962</p>
       </div>
     </div>
     <!--CaseStudy4 -->
@@ -386,9 +386,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title-l">RESULTS OF MANIPULATIONS</P>
+        <P class="titleL">RESULTS OF MANIPULATIONS</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">the comparison of the results of case study manipulations </p>
+        <p class="textM">the comparison of the results of case study manipulations </p>
 
       </div>
     </div>
@@ -404,16 +404,16 @@
 
     <!--project -->
     <div class="column">
-      <p class="t-title-l"> My Understanding of Architecture </p>
+      <p class="titleL"> My Understanding of Architecture </p>
       <p class="horizontal-line"></p>
-      <p class="t-text-m">Architecture is nothing more but a union of disparate systems. Every
+      <p class="textM">Architecture is nothing more but a union of disparate systems. Every
         aspect of an architectural design is part of one system or another. </p>
-      <p class="t-text-m">
+      <p class="textM">
         For example, in an office building, the columns form a sequence, the furniture establish
         the sequence, the repetition of the program as well as the repetition of the elements
       </p>
       <img src="Project.jpg" alt="DIAGRAM" class="image float">
-      <p class="t-thesis-casestudy">a union of disparate systems</p>
+      <p class="textS styleItalic">a union of disparate systems</p>
     </div>
 
   </div>
@@ -425,34 +425,34 @@
 
   <!--project1 -->
   <div class="column marginAll">
-    <p class="t-title-l"> My Understanding of Architecture </p>
+    <p class="titleL"> My Understanding of Architecture </p>
     <p class="horizontal-line"></p>
-    <p class="t-text-m"> Different types of sequences can be extended into larger systems.
+    <p class="textM"> Different types of sequences can be extended into larger systems.
       Through aggregation, combination, and in relation to other arrangements, they form larger
       spatial networks and complex material systems. </p>
-    <p class="t-text-m">
+    <p class="textM">
       The individual systems can be continuous or discontinuous, and they are all related in
       some way. As an architect, it's important that one does not only consider continuity as it
       pertains to a single system, but also the effects that continuous/discontinuous aspects of
       different systems can have on each other. </p>
-    <p class="t-text-m">
+    <p class="textM">
       The use of discontinuity in a single system can be used to create distinctive features in
       an architectural design if the architect considers its effect on other systems.
     </p>
     <img src="Project1.jpg" alt="DIAGRAM" class="image float">
-    <p class="t-thesis-casestudy">a union of disparate systems</p>
+    <p class="textS styleItalic">a union of disparate systems</p>
   </div>
   <!--project1 -->
   <div class="blank-lineheight-xl"></div>
 
   <!--video-->
   <div class="column marginAll">
-    <P class="t-title-l"> DIFFERENTIATED CONTINUITY </P>
+    <P class="titleL"> DIFFERENTIATED CONTINUITY </P>
     <p class="horizontal-line"></p>
-    <p class="t-text-m">Differentiated continuity apply on different scales</p>
+    <p class="textM">Differentiated continuity apply on different scales</p>
     <div class="blank-lineheight-xl"></div>
 
-    <div class="center-h">
+    <div class="centerHorz">
       <video width="70%" height="auto" controls autoplay>
         <source src="./anomation.mp4" type="video/mp4">
       </video>
@@ -471,10 +471,10 @@
 
   <!--Scale-->
   <div class="column marginAll">
-    <p class="t-title-l">DRAWING</p>
+    <p class="titleL">DRAWING</p>
     <p class="horizontal-line"></p>
-    <p class="t-text-m">Large-Scale</p>
-    <div class="blank-lineheight-m"></div>
+    <p class="textM">Large-Scale</p>
+    <div class="blankHM"></div>
 
     <img src="methods1.png" alt="DIAGRAM" class="image float">
   </div>
@@ -484,10 +484,10 @@
 
   <!--Scale-->
   <div class="column marginAll">
-    <p class="t-title-l">DRAWING </p>
+    <p class="titleL">DRAWING </p>
     <p class="horizontal-line"></p>
-    <p class="t-text-m">Mid-Scale</p>
-    <div class="blank-lineheight-m"></div>
+    <p class="textM">Mid-Scale</p>
+    <div class="blankHM"></div>
 
     <img src="methods1-1.png" alt="DIAGRAM" class="image float">
   </div>
@@ -496,48 +496,48 @@
 
   <!--Scale-->
   <div class="column marginAll">
-    <P class="t-title-l">DRAWING </P>
-    <p class="t-text-m">Large-Scale</p>
-    <div class="blank-lineheight-m"></div>
+    <P class="titleL">DRAWING </P>
+    <p class="textM">Large-Scale</p>
+    <div class="blankHM"></div>
 
     <img src="methods2.png" alt="DIAGRAM" class="image">
 
   </div>
   <!--Scale-->
-  <div class="blank-lineheight-m"></div>
+  <div class="blankHM"></div>
 
   <!--Scale-->
   <div class="column marginAll">
 
-    <P class="t-title-l">DRAWING </P>
+    <P class="titleL">DRAWING </P>
     <p class="horizontal-line"></p>
-    <p class="t-text-m">Mid-Scale</p>
-    <div class="blank-lineheight-m"></div>
+    <p class="textM">Mid-Scale</p>
+    <div class="blankHM"></div>
 
     <img src="methods2-1.png" alt="DIAGRAM" class="image">
 
   </div>
   <!--Scale-->
-  <div class="blank-lineheight-l"></div>
+  <div class="blankHL"></div>
 
   <!--Scale-->
   <div class="column marginAll">
-    <p class="t-title-l">DRAWING</p>
+    <p class="titleL">DRAWING</p>
     <p class="horizontal-line"></p>
-    <p class="t-text-m">Mid-Scale</p>
-    <div class="blank-lineheight-m"></div>
+    <p class="textM">Mid-Scale</p>
+    <div class="blankHM"></div>
     <img src="methods3.png" alt="DIAGRAM" class="image">
   </div>
   <!--Scale-->
-  <div class="blank-lineheight-l"></div>
+  <div class="blankHL"></div>
 
   <!--Scale-->
   <div class="column marginAll">
 
-    <p class="t-title-l">DRAWING </p>
+    <p class="titleL">DRAWING </p>
     <p class="horizontal-line"></p>
-    <p class="t-text-m">Small-Scale</p>
-    <div class="blank-lineheight-m"></div>
+    <p class="textM">Small-Scale</p>
+    <div class="blankHM"></div>
 
     <img src="methods3-1.png" alt="DIAGRAM" class="image">
   </div>
@@ -551,10 +551,10 @@
   <!-- content-->
   <!--photos -->
   <div class="column marginAll">
-    <P class="t-title-l">PHOTOS</P>
+    <P class="titleL">PHOTOS</P>
     <p class="horizontal-line"></p>
-    <p class="t-text-m"> Circulation</p>
-    <div class="blank-lineheight-m"></div>
+    <p class="textM"> Circulation</p>
+    <div class="blankHM"></div>
     <img src="photo1.png" alt="DIAGRAM" class="image float">
 
   </div>
@@ -564,10 +564,10 @@
 
   <!--photos -->
   <div class="column marginAll">
-    <p class="t-title-l">PHOTOS </p>
+    <p class="titleL">PHOTOS </p>
     <p class="horizontal-line"></p>
-    <p class="t-text-m">Structure </p>
-    <div class="blank-lineheight-m"></div>
+    <p class="textM">Structure </p>
+    <div class="blankHM"></div>
 
     <img src="photo2.png" alt="DIAGRAM" class="image float">
   </div>
@@ -577,10 +577,10 @@
   <!--photos -->
   <div class="column marginAll">
 
-    <P class="t-title-l">PHOTOS</P>
+    <P class="titleL">PHOTOS</P>
     <p class="horizontal-line"></p>
-    <p class="t-text-m">Surface</p>
-    <div class="blank-lineheight-m"></div>
+    <p class="textM">Surface</p>
+    <div class="blankHM"></div>
     <img src="photo3.png" alt="DIAGRAM" class="image">
 
 
@@ -590,10 +590,10 @@
 
   <!--photos -->
   <div class="column marginAll">
-    <p class="t-title-l">PHOTOS</p>
+    <p class="titleL">PHOTOS</p>
     <p class="horizontal-line"></p>
-    <p class="t-text-m"> Perspective </p>
-    <div class="blank-lineheight-m"></div>
+    <p class="textM"> Perspective </p>
+    <div class="blankHM"></div>
 
     <img src="photo4.png" alt="DIAGRAM" class="image float">
   </div>
