--- a/photography/index.html
+++ b/photography/index.html
@@ -136,7 +136,7 @@ Interested in what you see? Shoot me an email :) " />
       </div>
     </div>
 
-    <div class="t-intro z-index-top" data-aos="fade-up">
+    <div class="t-intro zTop" data-aos="fade-up">
       Always got inspiration from nature. I love to recompose the nature form with my camera in 2
       dimensions. Observing the narrative of natural components within a certain perspective.</div>
   </div>
@@ -147,15 +147,15 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 1-->
   <div id="ytrigger-pg">
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./01.jpg">
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="titleL">Bosque Del Apache National Wildlife Refuge</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -166,13 +166,13 @@ Interested in what you see? Shoot me an email :) " />
 
 
   <div id="ytrigger-pg2">
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="titleL">Bosque Del Apache National Wildlife Refuge</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -186,15 +186,15 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 3-->
   <div id="ytrigger-pg3">
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./03.jpg">
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="titleL">Bosque Del Apache National Wildlife Refuge</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -205,13 +205,13 @@ Interested in what you see? Shoot me an email :) " />
 
   <div id="ytrigger-pg4">
 
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
+        <p href="/Photography" class="titleL">Sacramento National Wildlife Refuge</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -226,15 +226,15 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 5-->
   <div id="ytrigger-pg5">
 
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./05.jpg">
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
+        <p href="/Photography" class="titleL">Sacramento National Wildlife Refuge</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -243,13 +243,13 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 6-->
   <div id="ytrigger-pg6">
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
+        <p href="/Photography" class="titleL">Sacramento National Wildlife Refuge</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -261,15 +261,15 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 7-->
   <div id="ytrigger-pg7">
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./07.jpg">
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <p class="t-title-l">Teton National Park </p>
+        <p class="titleL">Teton National Park </p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">September, 2020</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">September, 2020</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -279,13 +279,13 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 8-->
   <div id="ytrigger-pg8">
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p class="t-title-l">White Sands National Monument</p>
+        <p class="titleL">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -298,15 +298,15 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 9-->
   <div id="ytrigger-pg9">
 
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./09.jpg">
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <p class="t-title-l">White Sands National Monument</p>
+        <p class="titleL">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -315,13 +315,13 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 10-->
   <div id="ytrigger-pg10">
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p class="t-title-l">White Sands National Monument</p>
+        <p class="titleL">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -333,15 +333,15 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 11-->
   <div id="ytrigger-pg11">
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./11.jpg">
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <p class="t-title-l">White Sands National Monument</p>
+        <p class="titleL">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -352,13 +352,13 @@ Interested in what you see? Shoot me an email :) " />
 
   <div id="ytrigger-pg12">
 
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p class="t-title-l">White Sands National Monument</p>
+        <p class="titleL">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -373,15 +373,15 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 13-->
   <div id="ytrigger-pg13">
 
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./13.jpg">
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <p class="t-title-l">White Sands National Monument</p>
+        <p class="titleL">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -391,13 +391,13 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 14-->
   <div id="ytrigger-pg14">
 
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p class="t-title-l">White Sands National Monument</p>
+        <p class="titleL">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -410,15 +410,15 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 15-->
   <div id="ytrigger-pg15">
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./15.jpg">
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <p class="t-title-l">Yellowstone National Park</p>
+        <p class="titleL">Yellowstone National Park</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">September, 2020 </p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">September, 2020 </p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -428,13 +428,13 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 16-->
   <div id="ytrigger-pg16">
 
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p class="t-title-l">Taos Pueblo Indian Reservation</p>
+        <p class="titleL">Taos Pueblo Indian Reservation</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -448,15 +448,15 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 17-->
   <div id="ytrigger-pg17">
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <img class="float shadowAll" src="./17.jpg">
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <p class="t-title-l">Donner Lake </p>
+        <p class="titleL">Donner Lake </p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019 </p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019 </p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -465,13 +465,13 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 18-->
   <div id="ytrigger-pg18">
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p class="t-title-l">Yellowstone National Park</p>
+        <p class="titleL">Yellowstone National Park</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">December, 2019</p>
-        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="textM">December, 2019</p>
+        <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -482,8 +482,8 @@ Interested in what you see? Shoot me an email :) " />
 
   <div class="blankHXL"></div>
 
-  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day! </p>
-  <p class="t-text-m center-h" data-aos="fade-up">More coming soon</p>
+  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
+  <p class="textM centerHorz" data-aos="fade-up">More coming soon</p>
 
 
 
