--- a/architecture/index.html
+++ b/architecture/index.html
@@ -137,7 +137,7 @@
       </div>
     </div>
 
-    <div class="t-intro z-index-top" data-aos="fade-up">
+    <div class="t-intro zTop" data-aos="fade-up">
       Most of the projects are from my three-year Master of Architecture program. Our main focuses
       were Design Theories, Methods, and Practices. Projects emphasize the major format, spatial,
       material, tectonic, social, technological, and environmental determinants of building form.
@@ -152,22 +152,22 @@
 
   <!--architecture 1-->
   <div id="ytrigger-arch">
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <a href="./recreation_commons"><img src="./ar_01.svg" id="rc1"> </a>
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <a class="t-title-l" data-aos="fade-up" href="./recreation_commons">
+        <a class="titleL" data-aos="fade-up" href="./recreation_commons">
           RECREATION COMMONS </a>
         </p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
-        <p class="t-text-m">M. Arch, CED, UC Berkeley</p>
-        <p class="t-text-m">Instructor: Roddy Creedon</p>
-        <p class="t-text-m">Duration: One Semester</p>
+        <p class="textM">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
+        <p class="textM">M. Arch, CED, UC Berkeley</p>
+        <p class="textM">Instructor: Roddy Creedon</p>
+        <p class="textM">Duration: One Semester</p>
 
-        <p class="t-text-m">Site: 110 Franklin St. San Francisco, CA, 94102</p>
-        <p class="t-text-m">Total Floor Area: 22900 s.f. 4 Floors</p>
+        <p class="textM">Site: 110 Franklin St. San Francisco, CA, 94102</p>
+        <p class="textM">Total Floor Area: 22900 s.f. 4 Floors</p>
       </div>
     </div>
   </div>
@@ -177,16 +177,16 @@
 
   <!--architecture 2-->
   <div id="ytrigger-arch2">
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <a class="t-title-l" data-aos="fade-up" href="./narrow_stripes/"> NARROW STRIPES </a>
+        <a class="titleL" data-aos="fade-up" href="./narrow_stripes/"> NARROW STRIPES </a>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
-        <p class="t-text-m">Duration: Six Weeks </p>
-        <p class="t-text-m">Site: Location: Hyde Park, London </p>
-        <p class="t-text-m">7500 square metres approx. </p>
-        <p class="t-text-m">Maximum Built Area: 4000 square metres </p>
+        <p class="textM">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
+        <p class="textM">Duration: Six Weeks </p>
+        <p class="textM">Site: Location: Hyde Park, London </p>
+        <p class="textM">7500 square metres approx. </p>
+        <p class="textM">Maximum Built Area: 4000 square metres </p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -197,20 +197,20 @@
   <div class="blankHXL"></div>
   <!--THESIS 3-->
   <div id="ytrigger-arch3">
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <a href="./thesis_studio/"><img class="shadowAll" src="./ar_07.jpg"></a>
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <a class="t-title-l" data-aos="fade-up" href="./thesis_studio/">ON ORDER: DIFFERENTIATED
+        <a class="titleL" data-aos="fade-up" href="./thesis_studio/">ON ORDER: DIFFERENTIATED
           CONTINUITY OF
           OBJECTS
         </a>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
-        <p class="t-text-m">M. Arch, CED, UC Berkeley</p>
-        <p class="t-text-m">Instructor: Rudabeh Pakravan, Kyle Steinfeld </p>
-        <p class="t-text-m">Duration: Two Semesters</p>
+        <p class="textM">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
+        <p class="textM">M. Arch, CED, UC Berkeley</p>
+        <p class="textM">Instructor: Rudabeh Pakravan, Kyle Steinfeld </p>
+        <p class="textM">Duration: Two Semesters</p>
       </div>
     </div>
   </div>
@@ -218,15 +218,15 @@
   <div class="blankHXL"></div>
   <!--MANIFOLD GROUND 4-->
   <div id="ytrigger-arch4">
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
       <div class="column widthM">
-        <a class="t-title-l" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
+        <a class="titleL" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">[IN]ARCH ADV, SUMMERS 2014 </p>
-        <p class="t-text-m">Summer Program, CED, UC Berkeley </p>
-        <p class="t-text-m">Instructor: Keith Plymale </p>
-        <p class="t-text-m">Duration: One Semester</p>
-        <p class="t-text-m">Site: 450 Hayes St. San Francisco, CA 94102 </p>
+        <p class="textM">[IN]ARCH ADV, SUMMERS 2014 </p>
+        <p class="textM">Summer Program, CED, UC Berkeley </p>
+        <p class="textM">Instructor: Keith Plymale </p>
+        <p class="textM">Duration: One Semester</p>
+        <p class="textM">Site: 450 Hayes St. San Francisco, CA 94102 </p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -239,20 +239,20 @@
   <!--RECOVERY OF RIVER EDGES 5-->
   <div id="ytrigger-arch5">
 
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <a class="t-title" href="./recovery_of_river_edges/"> <img class="shadowAll"
           src="./ar_03.jpg"></a>
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <a class="t-title-l" data-aos="fade-up" href="./recovery_of_river_edges/"> RECOVERY OF
+        <a class="titleL" data-aos="fade-up" href="./recovery_of_river_edges/"> RECOVERY OF
           RIVER EDGES </a>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Introduction to Architecture Studio 2, Spring 2016 </p>
-        <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
-        <p class="t-text-m">Instructor: Jay Atherton </p>
-        <p class="t-text-m">Duration: One Semester</p>
-        <p class="t-text-m">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
+        <p class="textM">Introduction to Architecture Studio 2, Spring 2016 </p>
+        <p class="textM">M. Arch, CED, UC Berkeley </p>
+        <p class="textM">Instructor: Jay Atherton </p>
+        <p class="textM">Duration: One Semester</p>
+        <p class="textM">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
         </p>
       </div>
     </div>
@@ -261,20 +261,20 @@
   <div class="blankHXL"></div>
   <!--CURVES 6-->
   <div id="ytrigger-arch6">
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <a class="t-title-l" data-aos="fade-up" href="./the_rotation_of_curves/">THE ROTATION OF
+        <a class="titleL" data-aos="fade-up" href="./the_rotation_of_curves/">THE ROTATION OF
           CURVES </a>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Introduction to Architecture Studio 1, Fall 2015 </p>
-        <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
-        <p class="t-text-m">Instructor: Rudabeh Pakravan </p>
-        <p class="t-text-m">Duration: One Semester</p>
+        <p class="textM">Introduction to Architecture Studio 1, Fall 2015 </p>
+        <p class="textM">M. Arch, CED, UC Berkeley </p>
+        <p class="textM">Instructor: Rudabeh Pakravan </p>
+        <p class="textM">Duration: One Semester</p>
       </div>
       <div class="vertical-line-blank">
       </div>
-      <a class="t-title-l" href="./the_rotation_of_curves/"> <img class="shadowAll"
+      <a class="titleL" href="./the_rotation_of_curves/"> <img class="shadowAll"
         src="./ar_05.jpg"></a>    </div>
 
   </div>
@@ -283,16 +283,16 @@
   <!--LACMA 7-->
   <div id="ytrigger-arch7">
 
-    <div class="row-change marginAll marginAll1920 center-h center-v">
-      <a class="t-title-l" href="./LACAMA/"> <img class="shadowAll" src="./ar_08.jpg"></a>
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+      <a class="titleL" href="./LACAMA/"> <img class="shadowAll" src="./ar_08.jpg"></a>
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <a class="t-title-l" data-aos="fade-up" href="./LACAMA/">LACMA</a>
+        <a class="titleL" data-aos="fade-up" href="./LACAMA/">LACMA</a>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
-        <p class="t-text-m">Instructor: Mark Anderson</p>
-        <p class="t-text-m">Duration: One Semester</p>
+        <p class="textM">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
+        <p class="textM">Instructor: Mark Anderson</p>
+        <p class="textM">Duration: One Semester</p>
       </div>
     </div>
   </div>
@@ -303,15 +303,15 @@
 
   <!--architecture 8-->
   <div id="ytrigger-arch8">
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p class="t-title-l" data-aos="fade-up">KAPPE HOUSE STUDY </p>
+        <p class="titleL" data-aos="fade-up">KAPPE HOUSE STUDY </p>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
-        <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
-        <p class="t-text-m">Instructor: Yung Ho Chang </p>
-        <p class="t-text-m">Duration: One Semester, One Unit</p>
+        <p class="textM">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
+        <p class="textM">M. Arch, CED, UC Berkeley </p>
+        <p class="textM">Instructor: Yung Ho Chang </p>
+        <p class="textM">Duration: One Semester, One Unit</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -327,8 +327,8 @@
   <div class="blankHXL"></div>
 
 
-  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day! </p>
-  <p class="t-text-m center-h" data-aos="fade-up">please email me for professional projects</p>
+  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
+  <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
   <div class="blank-lineheight-s"></div>
 
   <!--body-->
