--- a/project/index.html
+++ b/project/index.html
@@ -140,12 +140,12 @@
       </div>
     </div>
 
-    <div class="t-intro z-index-top" data-aos="fade-up">
+    <div class="t-intro zTop" data-aos="fade-up">
       I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS. Some of
       the apps I have designed recently. Currently attending Google UX Certificate courses more
       projects coming soon. Any improvements or advice would be greatly appreciated.</div>
   </div>
-  <div class="blank-lineheight-m"></div>
+  <div class="blankHM"></div>
 
 
 
@@ -154,7 +154,7 @@
     <p class="vertical-line ver1"></p>
   </div>
   <!-- content-->
-  <div class="row marginAll item-height-m center-v marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll1920">
     <p class="tArrow"> Selected Projects </p>
     <img class="se-arrow" src="../arrow-se.svg" alt="se-arrow">
   </div>
@@ -162,17 +162,17 @@
   <!--MEAL PLANNER-->
   <div id="ytrigger3">
 
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <a href="/project/meal_planner">
         <img src="../layout_mealplanner.png" alt="Meal Planner">
       </a>
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <a href="/project/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
+        <a href="/project/meal_planner" class="titleL" data-aos="fade-up">MEAL PLANNER</a>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">A mobile app helps planning a healthy meal</p>
-        <p class="t-text-m">May 2021 - August 2021</p>
+        <p class="textM">A mobile app helps planning a healthy meal</p>
+        <p class="textM">May 2021 - August 2021</p>
       </div>
     </div>
   </div>
@@ -181,12 +181,12 @@
   <!--GARDENERS HUB-->
   <div id="ytrigger4">
 
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
       <div class="column widthM">
-        <a href="/project/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
+        <a href="/project/gardeners_hub" class="titleL" data-aos="fade-up">GARDENERS HUB</a>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">A marketplace for local community</p>
-        <p class="t-text-m">May 2021 - August 2021</p>
+        <p class="textM">A marketplace for local community</p>
+        <p class="textM">May 2021 - August 2021</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -203,21 +203,21 @@
   <div id="ytrigger">
 
 
-    <div class="row-change marginAll marginAll1920 center-h center-v">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
       <a href="/project/appointment_maker">
         <img src="../layout_AppointmentMaker.png" alt="Appointment Maker">
       </a>
       <div class="vertical-line-blank">
       </div>
       <div class="column widthM">
-        <a href="/project/appointment_maker" class="t-title-l" data-aos="fade-up">Appointment
+        <a href="/project/appointment_maker" class="titleL" data-aos="fade-up">Appointment
           Maker</a>
         <p class="horizontal-line"></p>
-        <p class="t-text-s"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 1</p>
-        <p class="t-text-s"> <strong>About:</strong> &nbsp; A scheduling app for making appointment
+        <p class="textS"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 1</p>
+        <p class="textS"> <strong>About:</strong> &nbsp; A scheduling app for making appointment
           makers</p>
-        <p class="t-text-s"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
-        <p class="t-text-m">Coming Soon</p>
+        <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
+        <p class="textM">Coming Soon</p>
       </div>
     </div>
   </div>
@@ -229,16 +229,16 @@
 
 
 
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p href="/project/indie" class="t-title-l" data-aos="fade-up">Indie Rock bands Website</p>
+        <p href="/project/indie" class="titleL" data-aos="fade-up">Indie Rock bands Website</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-s"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 2</p>
-        <p class="t-text-s"> <strong>About:</strong> &nbsp; A responsive website for album listening
+        <p class="textS"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 2</p>
+        <p class="textS"> <strong>About:</strong> &nbsp; A responsive website for album listening
           & ordering for Indie Rock bands</p>
-        <p class="t-text-s"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
-        <p class="t-text-m">Coming Soon</p>
+        <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
+        <p class="textM">Coming Soon</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -254,16 +254,16 @@
   <div id="ytrigger2">
 
 
-    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
 
       <div class="column widthM">
-        <p href="/project/meal_planner" class="t-title-l" data-aos="fade-up">Medication Reminder</p>
+        <p href="/project/meal_planner" class="titleL" data-aos="fade-up">Medication Reminder</p>
         <p class="horizontal-line"></p>
-        <p class="t-text-s"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 3</p>
-        <p class="t-text-s"> <strong>About:</strong> &nbsp; A cross-platform to help people remember
+        <p class="textS"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 3</p>
+        <p class="textS"> <strong>About:</strong> &nbsp; A cross-platform to help people remember
           to take medicine on time</p>
-        <p class="t-text-s"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
-        <p class="t-text-m">Coming Soon</p>
+        <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
+        <p class="textM">Coming Soon</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -277,8 +277,8 @@
   <div class="blankHL"></div>  <div class="blankHL"></div>
 
 
-  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day! </p>
-  <p class="t-text-m center-h" data-aos="fade-up">More coming soon</p>
+  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
+  <p class="textM centerHorz" data-aos="fade-up">More coming soon</p>
 
 
 
